# Layrs

./: .env.example  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  package.json  playwright.config.ts  playwright.native.config.ts  playwright.real.config.ts  playwright.web.config.ts  pnpm-lock.yaml
apps/studio-desktop/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/studio-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/studio-desktop/src-tauri/.layrs/: access.json
apps/studio-desktop/src-tauri/capabilities/: default.json
apps/studio-desktop/src-tauri/src/: access_registry.rs  auth.rs  desktop_state.rs  folder_dialog.rs  http_client.rs  main.rs
apps/studio-web/: index.html  package.json
crates/layrs-api/: Cargo.toml
crates/layrs-cli/: Cargo.toml
crates/layrs-cli/src/: args.rs  engine.rs  lib.rs  main.rs  render.rs
crates/layrs-cli/src/engine/: weaves.rs
crates/layrs-cli/tests/: local_data_safety.rs  weave_local_safety.rs
crates/layrs-cli/tests/support/: local_data_safety.rs  mod.rs
crates/layrs-client-core/: Cargo.toml
crates/layrs-client-core/src/: access_registry.rs  auth.rs  desktop_state.rs  http_client.rs  lib.rs  object_store.rs  secret_store.rs
crates/layrs-client-core/src/access_registry/: api_local_spaces.rs  api_operations.rs  bootstrap.rs  diff.rs  models.rs  publish.rs  receive.rs  tests.rs  utils.rs  weaves.rs  working_tree.rs
crates/layrs-client-core/src/access_registry/tests/: helpers.rs  local_layers.rs  store_compaction.rs  sync_layers.rs
crates/layrs-client-core/src/access_registry/weaves/: resolution.rs
crates/layrs-core/: Cargo.toml
crates/layrs-daemon/: Cargo.toml
crates/layrs-gates/: Cargo.toml
crates/layrs-graph/: Cargo.toml
crates/layrs-lens-code/: Cargo.toml
crates/layrs-lens-image/: Cargo.toml
crates/layrs-lens-raw/: Cargo.toml
crates/layrs-lens-sdk/: Cargo.toml
crates/layrs-lens-text/: Cargo.toml
crates/layrs-policy/: Cargo.toml
crates/layrs-proof/: Cargo.toml
crates/layrs-server/: Cargo.toml
crates/layrs-server/src/: auth.rs  lenses.rs  lib.rs  main.rs  runtime.rs
crates/layrs-server/src/runtime/: auth_routes.rs  device_routes.rs  html.rs  http.rs  mod.rs  routes.rs  tests.rs  wire.rs
crates/layrs-server/src/web/: access.rs  auth.rs  devices.rs  layers.rs  mod.rs  repository.rs  spaces.rs  studio.rs  teams.rs  workspaces.rs
crates/layrs-server/src/web/sections/: access_timeline_values.rs  artifact_lens_values.rs  artifact_publish.rs  auth_handlers.rs  device_handlers.rs  devices_audit_policy.rs  layer_state_publish.rs  routing.rs  session_authz.rs  snapshot_values.rs  space_layer_handlers.rs  step_tree_values.rs  store_object_bodies.rs  store_objects.rs  studio_sync_handlers.rs  tests.rs  timeline_artifact_access_handlers.rs  weave_conflict_resolution.rs  weave_handlers.rs  weave_replay_plan.rs  wire_utils.rs  workspace_invitation_values.rs  workspace_team_handlers.rs
crates/layrs-server/src/web/sections/tests/: store_objects.rs  unit.rs  weaves.rs
crates/layrs-steps/: Cargo.toml
crates/layrs-store-local/: Cargo.toml
crates/layrs-store-server/: Cargo.toml
scripts/: check-file-size.mjs  dev-down.mjs  dev.mjs  playwright-run.mjs  test-all.mjs  test-core.mjs
tests/: README.md
(+118 files in other folders)
