[package]
name = "layrs-cli"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
layrs-client-core = { path = "../layrs-client-core" }
serde = { workspace = true }
serde_json = "1"

[lib]
path = "src/lib.rs"

[[bin]]
name = "layrs"
path = "src/main.rs"
