[package]
name = "layrs-client-core"
edition = "2021"
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
blake3 = "1"
layrs-lens-raw = { path = "../layrs-lens-raw" }
layrs-lens-sdk = { path = "../layrs-lens-sdk" }
layrs-lens-text = { path = "../layrs-lens-text" }
serde = { workspace = true }
serde_json = "1"
zstd = "0.13"
