[package]
name = "layrs-server"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
argon2 = "0.5"
axum = "0.7"
base64 = "0.22"
blake3 = "1"
hex = "0.4"
layrs-api = { path = "../layrs-api" }
layrs-store-server = { path = "../layrs-store-server" }
layrs-sync = { path = "../layrs-sync" }
serde = { workspace = true }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "migrate", "macros"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
