[package]
name = "layrs-studio-desktop"
version = "0.0.0"
description = "Layrs Studio desktop shell"
edition = "2021"

[workspace]

[build-dependencies]
tauri-codegen = { version = "=2.0.0" }
tauri-build = { version = "=2.0.0", features = [] }

[dependencies]
blake3 = "1"
idna_adapter = { version = "=1.0.0" }
layrs-client-core = { path = "../../../crates/layrs-client-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "=3.12.0" }
serde_with_macros = { version = "=3.12.0" }
tauri = { version = "=2.0.0", features = [] }
tauri-codegen = { version = "=2.0.0" }
tauri-macros = { version = "=2.0.0" }
tauri-runtime = { version = "=2.0.0" }
tauri-runtime-wry = { version = "=2.0.0" }
tauri-utils = { version = "=2.0.0" }

[features]
custom-protocol = ["tauri/custom-protocol"]
